May

The nearest tib field should now be fully grown, so you don't need to run into the damage zone to harvest it.*

Tiberium immune Power Armour.*

Added more fallback within having Bob's Ores.*

Gave up on coding growth to not damage poles, and just made them immune to tib damage. Fuck it.*

---------------------------------------------------------------------------------------------------

May 10 

Fixed the Tiberium Value setting. Tiberium Value now only affects Refining recipes and growth credit recipes.

Fixed the usage of the wrong setting for autogeneration.

Fixed a debug thing.

Fixed growth not scaling to the North and West.

---------------------------------------------------------------------------------------------------

May 9

Added to description of SRF hub with power upkeep requirements.

Changes to the recipe autogeneration to fix several bugs.

Disabled setting to add sludge waste to direct recipes, until the library is fixed.

Uranium Growth Credits are now scaled to the direct recipe.

Moved sludge to brick to earlier.

Moved Liquid Tib Bomb to later.

---------------------------------------------------------------------------------------------------

May 8

Fixed growth accelerator description being different for the item and entity.

Fixed another literally unplayable typo.

Removed the patch notes file, so you don't have to download 5kb of useless text.

Reverted the removal of Oil specific mult for the direct recipe.

Fixed the Direct Uranium recipe for Angel's only.

Correctly set the minimum values for settings, so that weird things don't happen.

Reintroduced setting to give direct recipes sludge waste.

---------------------------------------------------------------------------------------------------

May 6

Added chemical science pack prereq to Advanced Tiberium Processing.

Appropriately locked the No Mine and Place Mine debug message behind the debug setting.
