@@ -1,4 +1,14 @@
-May
+May 12
+
+Fixed a debug thing.
+
+Fixed autogeneration setting usage.
+
+Reduced range of node damage from 10% more than growth radius to 60% of growth radius.
+
+Added an exponent to the node damage formula, so each added node is less effective than the previous.
+
+Fixed autogeneration math stuff, so Tiberium Value isn't backwards.
 
 The nearest tib field should now be fully grown, so you don't need to run into the damage zone to harvest it.*
 
@@ -10,7 +20,7 @@ Gave up on coding growth to not damage poles, and just made them immune to tib d
 
 ---------------------------------------------------------------------------------------------------
 
-May 10 
+May 11
 
 Fixed the Tiberium Value setting. Tiberium Value now only affects Refining recipes and growth credit recipes.
 
